# tg

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  run2.sh
db/: database.db  schema.sql
modules/: logger.py  pw.py  tg.py  utils.py
my_modules/: my_sqlite3.py  my_tg.py  utils.py
