[project]
name = "telegramm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "D203", "D213", "COM812", "TD003", "TD004", "TD002", "FIX002"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "double"
preview = true