[project]
name = "telegramm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.60.1",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    ".tox",
    ".venv",
    "__pycache",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "D203", "D213", "COM812", "TD003", "TD004", "TD002", "FIX002"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "double"
preview = true


[tool.pylint]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
  "missing-docstring",
  "too-many-branches",
  "too-many-arguments",
  "invalid-name",
]

[tool.pylint.basic]
variable-rgx = "^[a-z_][a-z0-9_]*$"
class-rgx = "^[A-Z][a-zA-Z0-9]+$"
function-rgx = "^[a-z_][a-z0-9_]*$"

[tool.pylint.design]
max-args = 5
max-attributes = 7
max-public-methods = 20